test/error/StForeachDictionaryKeyTypeMismatch.fu
public static class Test
{
	public static bool Run()
	{
		Dictionary<int, int>() dict;
		dict[3] = 15;
		foreach ((string key, int value) in dict) { //ERROR: Cannot convert 'int' to 'string'
		}
		return true;
	}
}
